# otel-study

./: README.md  docker-compose.yml
awesome-api/: Cargo.toml
awesome-api/src/: main.rs
misc/: docker-compose.yml
repeater-api/: Cargo.toml
repeater-api/src/: main.rs
