[package]
name = "awesome-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.4"
serde = { version = "1", features = ["derive"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.7.0" }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread", "reqwest_collector_client"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
